@@ -12,7 +12,7 @@
 
 int main(int argc, char **argv)
 {
-#if defined(VISP_HAVE_REALSENSE) || defined(VISP_HAVE_REALSENSE2) && (VISP_CXX_STANDARD >= VISP_CXX_STANDARD_11)
+#if defined(VISP_HAVE_REALSENSE2) && (RS2_API_VERSION > ((2 * 10000) + (31 * 100) + 0)) && (VISP_CXX_STANDARD >= VISP_CXX_STANDARD_11)
   std::vector<std::pair<std::string, std::string> > type_serial_nb;
   std::vector<bool> cam_found;
 
@@ -115,8 +115,11 @@ int main(int argc, char **argv)
 #else
   (void) argc;
   (void) argv;
-#if !(defined(VISP_HAVE_REALSENSE) || defined(VISP_HAVE_REALSENSE2))
+#if !(defined(VISP_HAVE_REALSENSE2))
   std::cout << "Install librealsense version > 2.31.0, configure and build ViSP again to use this example" << std::endl;
+#endif
+#if !(RS2_API_VERSION > ((2 * 10000) + (31 * 100) + 0))
+  std::cout << "librealsense is detected but its version is too old. Install librealsense version > 2.31.0, configure and build ViSP again to use this example" << std::endl;
 #endif
 #if (VISP_CXX_STANDARD < VISP_CXX_STANDARD_11)
   std::cout << "This turorial should be built with c++11 support" << std::endl;
